SERVER-56743 Reintroduce validation for no $-prefixed fields in _id