src/mongo/db/ops/insert.cpp
@@ -132,8 +132,7 @@ StatusWith<BSONObj> fixDocumentForInsert(OperationContext* opCtx, const BSONObj&
                 if (e.type() == Array) {
                     return StatusWith<BSONObj>(ErrorCodes::BadValue, "can't use an array for _id");
                 }
-                if (!feature_flags::gFeatureFlagDotsAndDollars.isEnabledAndIgnoreFCV() &&
-                    e.type() == Object) {
+                if (e.type() == Object) {
                     BSONObj o = e.Obj();
                     Status s = o.storageValidEmbedded();
                     if (!s.isOK())
